[AutoDiff] Disable `isLegalAggregates` assertion for generic differentiation. (#22024)

Enable generic differentiation by disabling `isLegalAggregates` assertion,
which was not correctly implemented. Add runtime test.

Addresses SR-9718.